Fixing body visibility bug

--- a/css/elders/createTask.css
+++ b/css/elders/createTask.css
@@ -1,7 +1,3 @@
-body {
-  visibility: hidden;
-}
-
 /* -------------------------------------------------- */
 /* Styles for Step Wizard                             */
 /* -------------------------------------------------- */
